--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,5 +5,15 @@
 </head>
 <body>
 	<h1>Hello world</h1>
+	<h2>7 wonders</h2>
+	<ul>
+		<li><strong>Alexandria</strong> <em>Lighthouse</em></li>
+		<li><strong>Babylon</strong> <em>Hanging Gardens</em></li>
+		<li><strong>Ephesos</strong> <em>Temple of Artemis</em></li>
+		<li><strong>Gizah</strong> <em>Pyramids</em></li>
+		<li><strong>Halikarnassos</strong> <em>Mausoleum</em></li>
+		<li><strong>Olympia</strong> <em>Statue of Zeus</em></li>
+		<li><strong>Rhodos</strong> <em>Colossus</em></li>
+	</u1>
 </body>
 </html>
