--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 	<h1>Hello world</h1>
-	<h2>7 wonders</h2>
+	<h2>7 Wonders</h2>
+	<p><a href = "http://www.amazon.com/Asmodee-SEV-EN01ASM-7-Wonders/dp/B0043KJW5M">7 Wonders</a> is a board game for 3-7 players.</p>
+	<h3>The Wonders</h3>
 	<ul>
 		<li><strong>Alexandria</strong> <em>Lighthouse</em></li>
 		<li><strong>Babylon</strong> <em>Hanging Gardens</em></li>
@@ -14,6 +16,19 @@
 		<li><strong>Halikarnassos</strong> <em>Mausoleum</em></li>
 		<li><strong>Olympia</strong> <em>Statue of Zeus</em></li>
 		<li><strong>Rhodos</strong> <em>Colossus</em></li>
-	</u1>
+	</ul>
+	<h3>Turn Overview</h3>
+	<ol>
+		<li>Each player starts with a hand of 7 cards.</li>
+		<li>Each player chooses one of those cards to add to their city.</li>
+		<ul>
+			<li>A player uses their resources to build that card.  They can also buy any necessary resources from their neighbors.</li>
+			<li>Or a player can use that card to build their wonder!  Again, they use their resources or buy them from their neighbors.</li>
+			<li>Or a player can discard a card to gain 3 coins.</li>
+		</ul> 
+		<li>All the players reveal the chosen cards at the same time.</li>
+		<li>Then the unchosen cards get passed to the next player.  Each player received a new, smaller hand from the previous player.</li>
+		<li>On the next turn, each player has chooses one card from this new hand!</li>
+	</ol>
 </body>
 </html>
