--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -15,5 +15,25 @@
 		<td>Lawful Evil</td><td>Neutral Evil</td><td>Chaotic Evil</td>
 	</tr>
 </table>
+
+<table>
+	<tr>
+		<th>D&D Alignments</th><th colspan="3">Good</th>
+	</tr>
+	<tr>
+		<th rowspan="3">Lawful</th>
+		<td>Lawful Good</td><td>Neutral Good</td><td>Chaotic Good</td>
+		<th rowspan="3">Chaotic</th>
+	</tr>
+	<tr>
+		<td>Lawful Neutral</td><td>Neutral</td><td>Chaotic Neutral</td>
+	</tr>
+	<tr>
+		<td>Lawful Evil</td><td>Neutral Evil</td><td>Chaotic Evil</td>
+	</tr>
+	<tr>
+		<td></td><th colspan="3">Evil</th>
+	</tr>
+</table>
 </body>
 </html>
