--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -277,6 +277,6 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- I still need to look up positionings and "play" with the css. -->
   </body>
 </html>
